yamls/excalidraw/excalidraw-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw-ingress
  namespace: excalidraw
spec:
  rules:
  defaultBackend:
    service:
      name: excalidraw-main
      port:
        number: 80
  ingressClassName: tailscale
